--- a/StringExtensions/StringExtensions.csproj
+++ b/StringExtensions/StringExtensions.csproj
@@ -16,6 +16,11 @@
     <Version>1.0.0</Version>
     <FileVersion>1.0.0</FileVersion>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <DocumentationFile>Morts.StringExtensions.xml</DocumentationFile>
+    <AssemblyName>Morts.StringExtensions</AssemblyName>
+  </PropertyGroup>
   
 
 </Project>
