--- a/StringExtensions/StringExtensions.csproj
+++ b/StringExtensions/StringExtensions.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;</TargetFrameworks>
     <RootNamespace>Morts.StringExtensions</RootNamespace>
+    <AssemblyName>Morts.StringExtensions</AssemblyName>
+    <DocumentationFile>Morts.StringExtensions.xml</DocumentationFile>
     <Description>Various extension methods that i often find my self writing again and again</Description>
     <Copyright>None</Copyright>
     <RepositoryType>git</RepositoryType>
@@ -10,6 +12,7 @@
     <PackageReleaseNotes>
       * Initial version.
     </PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/Toudahl/StringExtensions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Toudahl/StringExtensions</RepositoryUrl>
     <Authors>Morten Toudahl</Authors>
     <AssemblyVersion>1.0.0</AssemblyVersion>
@@ -18,9 +21,15 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DocumentationFile>Morts.StringExtensions.xml</DocumentationFile>
-    <AssemblyName>Morts.StringExtensions</AssemblyName>
+    <PackageLicenseFile>license.md</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\license.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
   
 
 </Project>
