--- a/StringExtensions/StringExtensions.csproj
+++ b/StringExtensions/StringExtensions.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.0;netstandard1.1;netstandard1.2;netstandard1.3;netstandard1.4;netstandard1.5;netstandard1.6;netstandard2.0;</TargetFrameworks>
+    <Title>Mortens string extensions</Title>
     <RootNamespace>Morts.StringExtensions</RootNamespace>
     <AssemblyName>Morts.StringExtensions</AssemblyName>
     <DocumentationFile>Morts.StringExtensions.xml</DocumentationFile>
