--- a/StringExtensions.Tests/StringExtensions.Tests.csproj
+++ b/StringExtensions.Tests/StringExtensions.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-
+    <TargetFramework>net5.0</TargetFramework>
+    <nullable>enable</nullable>
     <IsPackable>false</IsPackable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
