--- a/StringExtensions/StringExtensions.csproj
+++ b/StringExtensions/StringExtensions.csproj
@@ -18,6 +18,8 @@
     <AssemblyVersion>2.0.0</AssemblyVersion>
     <Version>2.0.0</Version>
     <FileVersion>2.0.0</FileVersion>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup>
